<resources>
    <string name="app_name">NotesDroid</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Title</string>
    <string name="write">Add your notes here</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="dont_have_acnt_msg">Don\'t have an account? SignUP!!!</string>
    <string name="decription_hint">Keep Writing\n</string>
    <string name="appTitle">NotesDroid .</string>
</resources>